--- a/source/about/index.html
+++ b/source/about/index.html
@@ -1,6 +1,6 @@
 layout: false
 title: "about"
-date: 2017-07-23 21:08:48
+date: 2017-12-25 21:08:48
 ---
 <html>
 <head>
@@ -1186,28 +1186,28 @@ date: 2017-07-23 21:08:48
 
     <h2><a name='header-n628' class='md-header-anchor '></a>个人简介</h2>
     <p>
-        卞留念，男，1997年出生，大连理工大学软件学院网络安全专业本科在读。本科期间组建自己的团队，专注从事Web开发工作。热爱技术，热衷于团队协作，开源社区活跃。对网络信息安全，隐私保护领域有浓厚兴趣。目前重视基础，希望多参加竞赛和研究。</p>
+        卞留念，男，1997年出生，大连理工大学软件学院网络安全专业本科在读。本科期间组建自己的团队，专注从事Web开发工作。热爱技术，热衷于团队协作，开源社区活跃。对态势感知、安全大数据可视化有浓厚的兴趣。目前重视基础，希望多参加竞赛和研究。</p>
     <h2><a name='header-n632' class='md-header-anchor '></a>项目经历</h2><h4><a name='header-n633'
                                                                             class='md-header-anchor '></a>EDA慕课网，OurEDA创新团队，Web全栈开发工程师（12/2016
     - 04/2017）</h4>
     <ul>
         <li>EDA慕课网<a href='http://bag.oureda.cn'>bag.oureda.cn</a>是汇集软件学院历届学长技术沙龙演讲的慕课网站。网站集大视频文件上传与播放、课程管理、附件管理、用户管理等功能于一体。
         </li>
-        <li>作为项目负责人，负责前后端全栈开发和项目进度管理。</li>
-        <li>项目2017年4月2号上线后，截至7月21号，网站日均访问量<strong>750+</strong>，单日最高访问量<strong>1043</strong>次。</li>
+        <li>项目负责人，承担web前后端全栈开发及日常维护。</li>
+        <li>项目2017年4月2号上线后，截至7月21号，网站日均访问量<strong>1500+</strong>，单日最高访问量<strong>2357</strong>次。</li>
     </ul>
     <h4><a name='header-n644' class='md-header-anchor '></a>学伴3.0，OurEDA创新团队，后台开发工程师（06/2016 - 11/2016）</h4>
     <ul>
         <li>学伴3.0是一款兼容各大高校平台，集公众号系统、论坛、查询成绩、课表、考场、借阅信息及图书检索等功能于一身的学生助手型App，支持IOS和Android平台。</li>
-        <li>作为后端总负责人接手大用户量的应用开发，负责API接口设计，后台代码的重构和维护。</li>
-        <li>学伴3.0上线后，用户量由原有<strong>5k</strong>人提升到<strong>1.5w</strong>人左右，基本覆盖大连理工大学本科生，应用日活量平均<strong>8k</strong>左右。
+        <li>在2.0的基础上，负责后端代码的重构，将原先使用Python开发的的后台改为了Nodejs负责API接口设计，开发3.0版本。</li>
+        <li>学伴3.0上线后，用户量由原有<strong>1w</strong>人提升到<strong>3w</strong>人左右，基本覆盖大连理工大学本科生，应用日活量平均<strong>16k</strong>左右。
         </li>
     </ul>
     <h4><a name='header-n655' class='md-header-anchor '></a>果蔬批发微信平台，OurEDA创新团队，前端开发工程师（06/2015 - 10/2015）</h4>
     <ul>
         <li>果蔬批发系统“小地主”，是拥有注册、商家管理、商品浏览、下单、配送、订单查询等功能的微商网站。</li>
-        <li>作为团队成员，负责前端开发，单/多商户转换。</li>
-        <li>在学长带领下完成项目后，该蔬果分销商使用该平台进行果蔬批发贸易，线上<strong>月流水过百万</strong>。</li>
+        <li>负责前端开发，使用AngularJs1.0与koa1.0进行开发，独立完成单商户架构向多商户架构修改工作。</li>
+        <li>该蔬果分销商使用该平台进行果蔬批发贸易，<strong>月流水过百万</strong>。</li>
     </ul>
     <h2><a name='header-n666' class='md-header-anchor '></a>研究经历</h2><h4><a name='header-n667'
                                                                             class='md-header-anchor '></a>轨迹隐私保护算法研究
@@ -1216,25 +1216,25 @@ date: 2017-07-23 21:08:48
         <li>在软件学院姚琳老师和其研究生的指导下，参与个人隐私保护方向的研究，负责 PPTD: Preserving personalized privacy in trajectory data publishing
             这篇论文的翻译和论文提出的SAGTD、SAG、STR、MPSTD、MCST五种算法隐私保护算法的C语言代码实现。
         </li>
-        <li>算法实现代码准确完整，能在两分钟内对1k+数据集进行敏感属性泛化和轨迹压缩处理，文档内容格式优秀，受指导老师青睐。</li>
     </ul>
     <h4><a name='header-n675' class='md-header-anchor '></a>《大数据安全》编纂</h4>
     <ul>
         <li>在本科导师丁锋老师和其研究生的指导下，加入<a
                 href='https://www.amazon.cn/%E5%A4%A7%E6%95%B0%E6%8D%AE%E5%AE%89%E5%85%A8-%E4%B8%81%E9%94%8B%E7%AD%89%E8%91%97/dp/B01MT6CDLV/ref=tmm_kin_title_0?_encoding=UTF8&qid=&sr='>《大数据安全》</a>一书的编纂团队，负责大数据安全相关资料的收集与整理工作，并对部分章节的内容、格式进行校验。
         </li>
-        <li>本书出版后，书后附录“小伙伴们的话”章节有本人赠言。</li>
     </ul>
 
     <!--edit-->
-    <h2><a name='header-n396' class='md-header-anchor '></a>获奖经历</h2>
-    <ul style="display: table;padding-left:10px;">
-        <li style="display: table-row;"><span style="display: table-cell">软件学院“逐梦杯”科技竞赛</span><span style="display: table-cell">一等奖</span></li>
-        <li style="display: table-row;"><span style="display: table-cell">辽宁省“互联网+”大学生创新创业大赛</span><span style="display: table-cell">三等奖</span></li>
-        <li style="display: table-row;"><span style="display: table-cell;padding-right:30px;">2016年“创青春”辽宁省大学生创业大赛</span><span style="display: table-cell">三等奖</span></li>
+    <h2><a name='header-n396' class='md-header-anchor '></a>项目所用技术总结</h2>
+    <ul>
+        <li>使用AngularJs1.0 + Nodejs的Express框架开发了果蔬批发系统“小地主”，前端使用datables，jquery，amazeui进行开发，后端使用sequelize做SQL查询层，工程复杂度较高。</li>
+        <li>在学伴3.0的项目里，吸取了一些项目的教训，在使用NodeJs的Koa框架开发后端时，大量使用了模块分离与功能分离，并且将前端代码分离了出来，使用Node做了一层中间层，虽然项目功能和复杂度比较高，但在增删功能时非常方便。</li>
+        <li>利用yo对经常使用的前端脚手架和后端脚手架进行了抽象，做到了工程的快速搭建，并用在了EDA慕课网站项目上面。</li>
+        <li>EDA慕课网项目使用React+Koa，做到了前后端分离，前端工程利用webpack对前端代码做了打包处理，后端工程利用当时最新的Koa2.0和ES6进行了后端开发，利用Babel进行了ES6到ES5的转译，项目做到了对大小达4GB+的视频文件的上传，播放，删除，复杂度较高。</li>
+        <li>考研对基础知识的复习，使我对开发有了新的认识，比如对函数参数的合法性检查应放到服务提供方去做，工程要面向数据结构而非面向功能等等。</li>
     </ul>
     <p><strong>致谢</strong></p>
-    <p> 感谢您花时间阅读我的简历，期待能有机会和您共事。</p>
+    <p> 感谢您花时间阅读我的简历，期待能有机会聆听您的教诲。</p>
     <!--edit end-->
 </div>
 </body>
